added sidebar, styles

--- a/partials/header.html
+++ b/partials/header.html
@@ -6,6 +6,7 @@
     <div>
       <nav>
         <a href="index.html">Home</a>
+        <a href="index.html">Favorites</a>
       </nav>
     </div>
   </div>
