--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background-color: #1a1a1a;
+  background-color: #ef5350;
 }
 
 .header div:first-child {
@@ -48,12 +48,13 @@ body {
 #pokeball {
   width: 30px;
   height: 30px;
+  border-radius: 500%;
 }
 
 footer {
   text-align: center;
   padding: 1rem;
-  background-color: #1a1a1a;
+  background-color: #ef5350;
 }
 
 #pokedex {
@@ -74,6 +75,7 @@ footer {
 
 .pokemon-card:hover {
   transform: translateY(-5px);
+  cursor: pointer;
 }
 
 .pokemon-card h2 {
@@ -86,12 +88,45 @@ footer {
   height: 120px;
 }
 
+.sidebar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 300px;
+  height: 100vh;
+  background: #333;
+  color: white;
+  padding: 1rem;
+  box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
+  transform: translateX(-100%);
+  transition: transform 0.3s ease;
+  z-index: 1000;
+  overflow-y: auto;
+}
+
+.sidebar.show {
+  transform: translateX(0);
+}
+
+.sidebar.hidden {
+  display: none;
+}
+
+#closeSidebar {
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  float: right;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
   }
-  .header, footer {
+  .header,
+  footer {
     background-color: #f0f0f0;
   }
   .header a {
