--- a/partials/header.html
+++ b/partials/header.html
@@ -1,12 +1,12 @@
 <div class="header">
-    <div>
-      <img src="./images/pokeball.jpg" alt="pokeball" id="pokeball" />
-      <a href="index.html">PokeDex</a>
-    </div>
-    <div>
-      <nav>
-        <a href="index.html">Home</a>
-        <a href="index.html">Favorites</a>
-      </nav>
-    </div>
+  <div>
+    <img src="/images/pokeball.jpg" alt="pokeball" id="pokeball" />
+    <a href="/index.html">PokeDex</a>
   </div>
+  <div>
+    <nav>
+      <a href="/index.html">Home</a>
+      <a href="/pages/favorites.html">Favorites</a>
+    </nav>
+  </div>
+</div>
