--- a/partials/header.html
+++ b/partials/header.html
@@ -1,7 +1,15 @@
 <div class="header">
   <div>
-    <img src="/images/pokeball.jpg" alt="pokeball" id="pokeball" />
-    <a href="/index.html">PokeDex</a>
+    <img
+      src="../images/pokeball.jpg"
+      alt="pokeball"
+      id="pokeball"
+      class="js-root-path"
+      data-path="images/pokeball.jpg"
+    />
+    <a href="../index.html" class="js-root-path" data-path="index.html"
+      >PokeDex</a
+    >
   </div>
   <div class="search-container">
     <form id="search-form">
@@ -27,8 +35,8 @@
           <option value="hp">HP</option>
           <option value="attack">Attack</option>
           <option value="defense">Defense</option>
-          <option value="special attack">Special Attack</option>
-          <option value="special defense">Special Defense</option>
+          <option value="special-attack">Special Attack</option>
+          <option value="special-defense">Special Defense</option>
           <option value="speed">Speed</option>
         </select>
 
@@ -49,8 +57,15 @@
   <div>
     <div>
       <nav>
-        <a href="/index.html">Home</a>
-        <a href="/pages/favorites.html">Favorites</a>
+        <a href="../index.html" class="js-root-path" data-path="index.html"
+          >Home</a
+        >
+        <a
+          href="../pages/favorites.html"
+          class="js-root-path"
+          data-path="pages/favorites.html"
+          >Favorites</a
+        >
       </nav>
     </div>
   </div>
